--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -70,10 +70,10 @@
       </div>
     </div>
 
-    <!-- ✅ Botão para ir para Sobre -->
+    
     <div class="menu-button-container" style="text-align: center; margin: 20px 0;">
-      <ion-button (click)="goToSobrenos()" expand="block" color="tertiary">
-        Sobre
+      <ion-button (click)="goToApi()" expand="block" color="tertiary">
+        api
       </ion-button>
     </div>
 
