--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,13 +1,45 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>perfil</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="header">
+  <h2>SOBRE</h2>
+</div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">perfil</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<!-- Conteúdo -->
+<div class="container">
+  <div class="card">
+    <h3>Descrição</h3>
+    <p>Vita+: Seu Hub Completo para Hábitos Saudáveis. Hidratação, Nutrição, Exercícios 1 App.
+O objetivo é ajudar as pessoas a manterem hábitos saudáveis de forma simples, combinando hidratação, alimentação, exercícios e saúde mental em um único app.</p>
+  </div>
+
+  <div class="card">
+    <h3>Conectividade (APIs)</h3>
+    <p>calorieNinjas</p>
+  </div>
+
+  <div class="card">
+    <h3>Recurso Nativo</h3>
+    <p>Câmera</p>
+  </div>
+
+
+  <div class="card">
+    <h3>Estudantes</h3>
+    <p>João Pedro Dias de moraes</p>
+    <p><strong>Turma:</strong>mobile</p>
+    <p><strong>Turno:</strong> manhã</p>
+    <p><strong>Unidade:</strong> bangu</p>
+    <p><strong>Período:</strong> 4º</p>
+    <p><strong>Ano Letivo:</strong> 2025</p>
+  </div>
+   <div class="card">
+    <h3>Estudantes</h3>
+    <p>Julio Cesar de Sousa Oliveira</p>
+    <p><strong>Turma:</strong> mobile </p>
+    <p><strong>Turno:</strong> manhã</p>
+    <p><strong>Unidade:</strong> Bangu</p>
+    <p><strong>Período:</strong> 4º</p>
+    <p><strong>Ano Letivo:</strong> 2025</p>
+    
+  </div>
+  
+  
+</div>
