--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,5 @@
 <ion-content>
   <div class="container">
-    <!-- Header com saudação -->
     <div class="header">
       <h1 class="greeting" *ngIf="userName">Olá, {{ userName }}</h1>
       <div class="profile-icon">
@@ -8,7 +7,6 @@
       </div>
     </div>
 
-    <!-- IMC Card -->
     <div class="card">
       <div class="card-content">
         <div class="card-left">
@@ -22,7 +20,6 @@
       </div>
     </div>
 
-    <!-- Água Card -->
     <div class="card">
       <div class="card-content">
         <div class="card-left">
@@ -46,7 +43,6 @@
       </div>
     </div>
 
-    <!-- Proteínas Card -->
     <div class="card">
       <div class="card-content">
         <div class="card-left">
@@ -80,31 +76,21 @@
   </div>
 </ion-content>
 
-<!-- Footer com barra de abas -->
 <ion-footer>
   <ion-toolbar>
-    <ion-tabs>
-      <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="home" (click)="goToHome()">
-          <ion-icon name="home-outline"></ion-icon>
-          <ion-label>Início</ion-label>
-        </ion-tab-button>
+    <ion-tab-bar slot="bottom">
+      
+      <ion-tab-button tab="home" routerLink="/home" routerDirection="root">
+        <ion-icon name="home-outline"></ion-icon>
+        <ion-label>Início</ion-label>
+      </ion-tab-button>
 
-        <ion-tab-button tab="treinos" (click)="goToTreinos()">
-          <ion-icon name="barbell-outline"></ion-icon>
-          <ion-label>Treinos</ion-label>
-        </ion-tab-button>
+      <ion-tab-button tab="treinos" routerLink="/treinos" routerDirection="root">
+        <ion-icon name="barbell-outline"></ion-icon>
+        <ion-label>Treinos</ion-label>
+      </ion-tab-button>
 
-        <ion-tab-button tab="progress" (click)="goToProgresso()">
-          <ion-icon name="trending-up-outline"></ion-icon>
-          <ion-label>Progresso</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="settings" (click)="goToConfiguracoes()">
-          <ion-icon name="settings-outline"></ion-icon>
-          <ion-label>Configurações</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
-  </ion-toolbar>
-</ion-footer>
+      <ion-tab-button tab="progress" routerLink="/progress" routerDirection="root">
+        <ion-icon name="trending-up-outline"></ion-icon>
+        <ion-label>Progresso</ion-label>
+      </ion-tab-button>
