dieta com scrud

--- a/src/app/api/api.page.html
+++ b/src/app/api/api.page.html
@@ -100,6 +100,11 @@
         </div>
       </div>
     }
+    <div class="menu-button-container" style="text-align: center; margin: 20px 0;">
+      <ion-button (click)="goTodieta()" expand="block" color="tertiary">
+        dieta
+      </ion-button>
+    </div>
     
   </div>
   
