--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -78,19 +78,28 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-tab-bar slot="bottom">
-      
-      <ion-tab-button tab="home" routerLink="/home" routerDirection="root">
-        <ion-icon name="home-outline"></ion-icon>
-        <ion-label>Início</ion-label>
-      </ion-tab-button>
+    <ion-tabs>
+      <ion-tab-bar slot="bottom">
+        <ion-tab-button tab="home" (click)="goToHome()">
+          <ion-icon name="home-outline"></ion-icon>
+          <ion-label>Início</ion-label>
+        </ion-tab-button>
 
-      <ion-tab-button tab="treinos" routerLink="/treinos" routerDirection="root">
-        <ion-icon name="barbell-outline"></ion-icon>
-        <ion-label>Treinos</ion-label>
-      </ion-tab-button>
+        <ion-tab-button tab="treinos" (click)="goToTreinos()">
+          <ion-icon name="barbell-outline"></ion-icon>
+          <ion-label>Treinos</ion-label>
+        </ion-tab-button>
 
-      <ion-tab-button tab="progress" routerLink="/progress" routerDirection="root">
-        <ion-icon name="trending-up-outline"></ion-icon>
-        <ion-label>Progresso</ion-label>
-      </ion-tab-button>
+        <ion-tab-button tab="progress" (click)="goToProgresso()">
+          <ion-icon name="trending-up-outline"></ion-icon>
+          <ion-label>Progresso</ion-label>
+        </ion-tab-button>
+
+        <ion-tab-button tab="settings" (click)="goToConfiguracoes()">
+          <ion-icon name="settings-outline"></ion-icon>
+          <ion-label>Configurações</ion-label>
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-tabs>
+  </ion-toolbar>
+</ion-footer>
