--- a/src/app/api/api.page.scss
+++ b/src/app/api/api.page.scss
@@ -149,4 +149,10 @@ ion-searchbar {
         color: #333; 
     }
 }
+ion-header ion-toolbar {
+  /* Fundo azul vibrante para a barra de ferramentas (o "container preto" que você mencionou) */
+  --background: #007aff;
+  /* Define a cor do conteúdo (títulos, botões/ícones) dentro da barra de ferramentas para branco */
+  --color: #fff; 
+}
 
