--- a/src/app/treinos/treinos.page.html
+++ b/src/app/treinos/treinos.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar >
     <ion-title>Meus Treinos</ion-title>
     <ion-buttons slot="end">
       <ion-button fill="clear">Filtro</ion-button>
