--- a/src/app/treinos/treinos.page.scss
+++ b/src/app/treinos/treinos.page.scss
@@ -74,3 +74,9 @@ ion-tab-button ion-icon {
 ion-tab-button ion-label {
   font-size: 0.75em;
 }
+ion-header ion-toolbar {
+  /* Fundo azul vibrante para a barra de ferramentas (o "container preto" que você mencionou) */
+  --background: #007aff;
+  /* Define a cor do conteúdo (títulos, botões/ícones) dentro da barra de ferramentas para branco */
+  --color: #fff; 
+}
