--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -69,7 +69,7 @@
     
     <div class="menu-button-container" style="text-align: center; margin: 20px 0;">
       <ion-button (click)="goToApi()" expand="block" color="tertiary">
-        api
+        consulte as calorias
       </ion-button>
     </div>
 
