--- a/src/app/treinos/treinos.page.html
+++ b/src/app/treinos/treinos.page.html
@@ -74,32 +74,36 @@
  
 </ion-content>
 
-<ion-footer>
+<ion-header>
   <ion-toolbar>
-    <ion-tabs>
-      <ion-tab-bar slot="bottom">
+    </ion-toolbar>
+</ion-header>
 
-        <ion-tab-button tab="home" (click)="goToHome()">
-          <ion-icon name="home-outline"></ion-icon>
-          <ion-label>Início</ion-label>
-        </ion-tab-button>
+<ion-content class="ion-padding">
+  </ion-content>
 
-        <ion-tab-button tab="treinos" (click)="goToTreinos()">
-          <ion-icon name="barbell-outline"></ion-icon>
-          <ion-label>Treinos</ion-label>
-        </ion-tab-button>
+<ion-footer>
+  <ion-tab-bar slot="bottom">
 
-        <ion-tab-button tab="progress" (click)="goToProgresso()">
-          <ion-icon name="trending-up-outline"></ion-icon>
-          <ion-label>Progresso</ion-label>
-        </ion-tab-button>
+    <ion-tab-button tab="home" (click)="goToHome()">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Início</ion-label>
+    </ion-tab-button>
 
-        <ion-tab-button tab="settings" (click)="goToConfiguracoes()">
-          <ion-icon name="settings-outline"></ion-icon>
-          <ion-label>Configurações</ion-label>
-        </ion-tab-button>
+    <ion-tab-button tab="treinos" (click)="goToTreinos()">
+      <ion-icon name="barbell-outline"></ion-icon>
+      <ion-label>Treinos</ion-label>
+    </ion-tab-button>
 
-      </ion-tab-bar>
-    </ion-tabs>
-  </ion-toolbar>
+    <ion-tab-button tab="progress" (click)="goToProgresso()">
+      <ion-icon name="trending-up-outline"></ion-icon>
+      <ion-label>Progresso</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="settings" (click)="goToConfiguracoes()">
+      <ion-icon name="settings-outline"></ion-icon>
+      <ion-label>Configurações</ion-label>
+    </ion-tab-button>
+
+  </ion-tab-bar>
 </ion-footer>
