--- a/src/app/api/api.page.scss
+++ b/src/app/api/api.page.scss
@@ -54,7 +54,7 @@ ion-content {
 ion-searchbar {
   
     --border-radius: 10px;
-    --background: #f0f0f0;
+    --background: #f0f0f0a4;
     margin-bottom: 15px; 
     box-shadow: none; 
 }
