--- a/src/app/avancado/avancado.page.html
+++ b/src/app/avancado/avancado.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <ion-icon name="arrow-back-outline"></ion-icon>
@@ -17,7 +17,7 @@
   <ion-accordion-group expand="compact">
 
     <!-- DIA 1 - PEITO + OMBRO -->
-    <ion-accordion value="dia1">
+    <ion-accordion value="dia1" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 1 • Peito + Ombro</ion-label>
       </ion-item>
@@ -47,9 +47,8 @@
       </div>
     </ion-accordion>
 
-
     <!-- DIA 2 - COSTAS + TRAPÉZIO -->
-    <ion-accordion value="dia2">
+    <ion-accordion value="dia2" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 2 • Costas + Trapézio</ion-label>
       </ion-item>
@@ -79,9 +78,8 @@
       </div>
     </ion-accordion>
 
-
     <!-- DIA 3 - PERNAS PESADO -->
-    <ion-accordion value="dia3">
+    <ion-accordion value="dia3" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 3 • Pernas (Avançado Pesado)</ion-label>
       </ion-item>
@@ -111,9 +109,8 @@
       </div>
     </ion-accordion>
 
-
     <!-- DIA 4 - BÍCEPS + TRÍCEPS -->
-    <ion-accordion value="dia4">
+    <ion-accordion value="dia4" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 4 • Bíceps + Tríceps</ion-label>
       </ion-item>
@@ -143,9 +140,8 @@
       </div>
     </ion-accordion>
 
-
     <!-- DIA 5 - OMBRO + PEITO EXPLOSIVO -->
-    <ion-accordion value="dia5">
+    <ion-accordion value="dia5" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 5 • Ombro + Peito Explosivo</ion-label>
       </ion-item>
