--- a/src/app/intermediario/intermediario.page.html
+++ b/src/app/intermediario/intermediario.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <ion-icon name="arrow-back-outline"></ion-icon>
@@ -16,162 +16,78 @@
 
   <ion-accordion-group expand="compact">
 
-    <!-- DIA 1 - PEITO + TRÍCEPS -->
-    <ion-accordion value="dia1">
+    <!-- DIA 1 -->
+    <ion-accordion value="dia1" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 1 • Peito + Tríceps</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Supino reto – 4x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Supino inclinado – 4x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Crossover – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Mergulho nas paralelas – 3x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Tríceps pulley corda – 3x12</p>
-        </div>
-
+        <div class="exercise-card"><p>Supino reto – 4x10</p></div>
+        <div class="exercise-card"><p>Supino inclinado – 4x10</p></div>
+        <div class="exercise-card"><p>Crossover – 3x12</p></div>
+        <div class="exercise-card"><p>Mergulho nas paralelas – 3x10</p></div>
+        <div class="exercise-card"><p>Tríceps pulley corda – 3x12</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 2 - COSTAS + BÍCEPS -->
-    <ion-accordion value="dia2">
+    <!-- DIA 2 -->
+    <ion-accordion value="dia2" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 2 • Costas + Bíceps</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Puxada aberta na frente – 4x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Remada curvada – 4x8</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Remada sentada – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Rosca direta – 4x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Rosca martelo – 3x12</p>
-        </div>
-
+        <div class="exercise-card"><p>Puxada aberta na frente – 4x10</p></div>
+        <div class="exercise-card"><p>Remada curvada – 4x8</p></div>
+        <div class="exercise-card"><p>Remada sentada – 3x12</p></div>
+        <div class="exercise-card"><p>Rosca direta – 4x10</p></div>
+        <div class="exercise-card"><p>Rosca martelo – 3x12</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 3 - PERNAS COMPLETO -->
-    <ion-accordion value="dia3">
+    <!-- DIA 3 -->
+    <ion-accordion value="dia3" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 3 • Pernas</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Agachamento livre – 4x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Leg press – 4x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Afundo – 3x12 cada perna</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Mesa flexora – 4x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Elevação de panturrilha – 4x15</p>
-        </div>
-
+        <div class="exercise-card"><p>Agachamento livre – 4x10</p></div>
+        <div class="exercise-card"><p>Leg press – 4x12</p></div>
+        <div class="exercise-card"><p>Afundo – 3x12 cada perna</p></div>
+        <div class="exercise-card"><p>Mesa flexora – 4x12</p></div>
+        <div class="exercise-card"><p>Elevação de panturrilha – 4x15</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 4 - OMBRO + TRAPÉZIO -->
-    <ion-accordion value="dia4">
+    <!-- DIA 4 -->
+    <ion-accordion value="dia4" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 4 • Ombro + Trapézio</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Desenvolvimento com halteres – 4x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Elevação lateral – 4x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Elevação frontal – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Remada alta – 3x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Encolhimento halteres – 3x12</p>
-        </div>
-
+        <div class="exercise-card"><p>Desenvolvimento com halteres – 4x10</p></div>
+        <div class="exercise-card"><p>Elevação lateral – 4x12</p></div>
+        <div class="exercise-card"><p>Elevação frontal – 3x12</p></div>
+        <div class="exercise-card"><p>Remada alta – 3x10</p></div>
+        <div class="exercise-card"><p>Encolhimento halteres – 3x12</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 5 - FULL BODY INTENSO -->
-    <ion-accordion value="dia5">
+    <!-- DIA 5 -->
+    <ion-accordion value="dia5" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 5 • Corpo inteiro</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Agachamento frontal – 4x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Levantamento terra – 4x6</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Paralelas – 3x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Remada curvada – 3x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Flexão de braço – 3x15</p>
-        </div>
-
+        <div class="exercise-card"><p>Agachamento frontal – 4x10</p></div>
+        <div class="exercise-card"><p>Levantamento terra – 4x6</p></div>
+        <div class="exercise-card"><p>Paralelas – 3x10</p></div>
+        <div class="exercise-card"><p>Remada curvada – 3x10</p></div>
+        <div class="exercise-card"><p>Flexão de braço – 3x15</p></div>
       </div>
     </ion-accordion>
 
