--- a/src/app/iniciante/iniciante.page.html
+++ b/src/app/iniciante/iniciante.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <ion-icon name="arrow-back-outline"></ion-icon>
@@ -16,164 +16,78 @@
 
   <ion-accordion-group expand="compact">
 
-    <!-- DIA 1 - PEITO + TRÍCEPS -->
-    <ion-accordion value="dia1">
+    <!-- DIA 1 -->
+    <ion-accordion value="dia1" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 1 • Peito + Tríceps</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Supino reto – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Supino inclinado – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Crucifixo máquina – 3x15</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Tríceps pulley – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Tríceps testa – 2x12</p>
-        </div>
-
+        <div class="exercise-card"><p>Supino reto – 3x12</p></div>
+        <div class="exercise-card"><p>Supino inclinado – 3x12</p></div>
+        <div class="exercise-card"><p>Crucifixo máquina – 3x15</p></div>
+        <div class="exercise-card"><p>Tríceps pulley – 3x12</p></div>
+        <div class="exercise-card"><p>Tríceps testa – 2x12</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 2 - COSTAS + BÍCEPS -->
-    <ion-accordion value="dia2">
+    <!-- DIA 2 -->
+    <ion-accordion value="dia2" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 2 • Costas + Bíceps</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Remada baixa – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Puxada na frente – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Remada unilateral – 3x10</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Rosca direta – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Rosca alternada – 2x12</p>
-        </div>
-
+        <div class="exercise-card"><p>Remada baixa – 3x12</p></div>
+        <div class="exercise-card"><p>Puxada na frente – 3x12</p></div>
+        <div class="exercise-card"><p>Remada unilateral – 3x10</p></div>
+        <div class="exercise-card"><p>Rosca direta – 3x12</p></div>
+        <div class="exercise-card"><p>Rosca alternada – 2x12</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 3 - PERNAS + GLÚTEO -->
-    <ion-accordion value="dia3">
+    <!-- DIA 3 -->
+    <ion-accordion value="dia3" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 3 • Pernas + Glúteo</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Agachamento – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Leg press – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Cadeira extensora – 3x15</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Mesa flexora – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Elevação pélvica – 3x12</p>
-        </div>
-
+        <div class="exercise-card"><p>Agachamento – 3x12</p></div>
+        <div class="exercise-card"><p>Leg press – 3x12</p></div>
+        <div class="exercise-card"><p>Cadeira extensora – 3x15</p></div>
+        <div class="exercise-card"><p>Mesa flexora – 3x12</p></div>
+        <div class="exercise-card"><p>Elevação pélvica – 3x12</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 4 - OMBRO + ABDÔMEN -->
-    <ion-accordion value="dia4">
+    <!-- DIA 4 -->
+    <ion-accordion value="dia4" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 4 • Ombro + Abdômen</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-          <p>Elevação lateral – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Desenvolvimento com halteres – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Elevação frontal – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Prancha – 3x30s</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Abdominal crunch – 3x20</p>
-        </div>
-
+        <div class="exercise-card"><p>Elevação lateral – 3x12</p></div>
+        <div class="exercise-card"><p>Desenvolvimento com halteres – 3x12</p></div>
+        <div class="exercise-card"><p>Elevação frontal – 3x12</p></div>
+        <div class="exercise-card"><p>Prancha – 3x30s</p></div>
+        <div class="exercise-card"><p>Abdominal crunch – 3x20</p></div>
       </div>
     </ion-accordion>
 
-
-    <!-- DIA 5 - FULL BODY -->
-    <ion-accordion value="dia5">
+    <!-- DIA 5 -->
+    <ion-accordion value="dia5" toggle-icon="chevron-down-outline">
       <ion-item slot="header">
         <ion-label>Dia 5 • Corpo todo</ion-label>
       </ion-item>
 
       <div class="accordion-content" slot="content">
-
-        <div class="exercise-card">
-         
-          <p>Agachamento – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          
-          <p>Remada sentada – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Supino reto – 3x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Rosca direta – 2x12</p>
-        </div>
-
-        <div class="exercise-card">
-          <p>Flexão – 2x10</p>
-        </div>
-
+        <div class="exercise-card"><p>Agachamento – 3x12</p></div>
+        <div class="exercise-card"><p>Remada sentada – 3x12</p></div>
+        <div class="exercise-card"><p>Supino reto – 3x12</p></div>
+        <div class="exercise-card"><p>Rosca direta – 2x12</p></div>
+        <div class="exercise-card"><p>Flexão – 2x10</p></div>
       </div>
     </ion-accordion>
 
