--- a/src/app/progresso/progresso.page.html
+++ b/src/app/progresso/progresso.page.html
@@ -22,7 +22,7 @@
   <!-- Lista de Fotos Salvas -->
   @for (item of fotosSalvas(); track $index) {
     <div style="margin-top: 20px;" (click)="abrirFoto(item.dataUrl)">
-      <img [src]="item.dataUrl" style="width: 100%; border-radius: 12px;" />
+      <img [src]="item.dataUrl" id="img" style="width: 20%; border-radius: 12px; " />
       <p style="text-align:center; margin-top: 6px; font-size:14px; color:#888;">
         Tirada em: {{ item.data }}
       </p>
@@ -41,7 +41,7 @@
       z-index:9999;
       padding:20px;">
       
-      <div style="width:100%; max-width:900px;">
+      <div style="width: 30%; max-width:900px;">
         <img [src]="foto()!" style="width:100%; border-radius:12px; margin-bottom:16px;" />
 
         <ion-button expand="full" color="danger" (click)="excluirFoto()">
